include_HEADERS = \
	${library_name}.h

pkginclude_HEADERS = \
${pkginclude_headers}

EXTRA_DIST = \
	${library_name}.h.in \
	${library_name}/definitions.h.in \
	${library_name}/features.h.in \
	${library_name}/types.h.in

DISTCLEANFILES = \
	${library_name}.h \
	${library_name}/definitions.h \
	${library_name}/features.h \
	${library_name}/types.h \
	Makefile \
	Makefile.in

